--- a/src/templates_s3/templator_s3.org
+++ b/src/templates_s3/templator_s3.org
@@ -262,6 +262,7 @@ trexio_s3_deinit (trexio_t* const file)
 trexio_exit_code
 trexio_s3_flush (trexio_t* const file)
 {
+printf("===== Début de trexio_s3_flush ======\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
 
   trexio_s3_t* f = (trexio_s3_t*) file;
@@ -284,6 +285,7 @@ $group$_t*
 trexio_s3_read_$group$ (trexio_s3_t* const file)
 {
 
+printf("===== Début de trexio_s3_read_group ======\n");
 
   if (file == NULL) return NULL;
 
@@ -439,44 +441,62 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
         // END REPEAT GROUP_DSET_NUM
         // START REPEAT GROUP_DSET_STR
       } else if (strcmp(buffer, "$group_dset$") == 0) {
-		printf("==> Traitement de '$group_dset$'\n");
-        	if (size_$group_dset$ != 0) {
+                        printf("==> Traitement de '$group_dset$'\n");
+                if (size_$group_dset$ != 0) {
           /* Allocate arrays */
-          		$group$->$group_dset$ = CALLOC(size_$group_dset$, $group_dset_dtype$);
-          		if ($group$->$group_dset$ == NULL) {
-            			trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            			return NULL;
-          		}   
-          
+printf("DEBUG: allocation de $group_dset$ pour %lu chaines\n", size_$group_dset$);
+                        $group$->$group_dset$ = CALLOC(size_$group_dset$, $group_dset_dtype$);
+
+
+if (!$group$->$group_dset$) {
+    perror("CALLOC échoué");
+    return NULL;
+}
+
+
+                        if ($group$->$group_dset$ == NULL) {
+                                trexio_s3_free_read_$group$(buffer, f, file, $group$);
+                                return NULL;
+                        }
+
           /* WARNING: this tmp array allows to avoid allocation of space for each element of array of string
            ,* BUT it's size has to be number_of_str*max_len_str where max_len_str is somewhat arbitrary, e.g. 32.
            ,*/
-         		 char* tmp_$group_dset$;
-          		 tmp_$group_dset$ = CALLOC(size_$group_dset$*32, char);
-          
-          		for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
-            			$group$->$group_dset$[i] = tmp_$group_dset$;
+                         char* tmp_$group_dset$;
+                         tmp_$group_dset$ = CALLOC(size_$group_dset$*32, char);
+
+
+               if (tmp_$group_dset$ == NULL) {
+			FREE($group$->$group_dset$); ////
+                        trexio_s3_free_read_$group$(buffer, f, file, $group$);
+                        return NULL;
+                }
+
+                        for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
+//				$group_dset$[i]=CALLOC(max_str_len, char);
+
+                                $group$->$group_dset$[i] = tmp_$group_dset$;
             /* conventional fcanf with "%s" only return the string before the first space character
              ,* to read string with spaces use "%[^\n]" possible with space before or after, i.e. " %[^\n]"
              ,*/
-            			rc2 = sscanf(line, " %1023[^\n]%n", buffer, &nread);
+                                rc2 = sscanf(line, " %1023[^\n]%n", buffer, &nread);
                                printf(":Dline6:%s:Fline6:\n", line);
                                 printf("==> Mot détecté (buffer6): %s, %ld\n\n", buffer, strlen(buffer));
                                 line += nread;
                                 printf(":Dline6-bis:%s:Fline6-bis:\n", line);
 
-            			if (rc2 != 1) {
-              				trexio_s3_free_read_$group$(buffer, f, file, $group$);
-              				return NULL;
-            			}
-            
-            			size_t tmp_$group_dset$_len = strlen(buffer);
-            			strncpy(tmp_$group_dset$, buffer, 32);
-            			tmp_$group_dset$[31] = '\0';
-            			tmp_$group_dset$ += tmp_$group_dset$_len + 1;
-          		}
+                                if (rc2 != 1) {
+					FREE(tmp_$group_dset$);
+					FREE($group$->$group_dset$);
+                                        trexio_s3_free_read_$group$(buffer, f, file, $group$);
+                                        return NULL;
+                                }
+                                size_t tmp_$group_dset$_len = strlen(buffer);
+                                strncpy(tmp_$group_dset$, buffer, 32);
+                                tmp_$group_dset$[31] = '\0';
+                                tmp_$group_dset$ += tmp_$group_dset$_len + 1;
+                        }
         }
-        
         // END REPEAT GROUP_DSET_STR
         // START REPEAT GROUP_NUM
       } else if (strcmp(buffer, "$group_num$_isSet") == 0) {
@@ -542,7 +562,7 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
                 printf(":Dline11:%s:Fline11:\n", line);
                 printf("==> Mot détecté (buffer11) : %s, %ld\n\n", buffer, strlen(buffer));
                 line += nread;
-                printf(":Dline11:%s:Fline11:\n", line);
+                printf(":Dline11-bis:%s:Fline11-bis:\n", line);
                 if ((rc2 != 1) || (strcmp(buffer, "$group_str$") != 0)) {
                         printf("==> Traitement de '$group_str$'\n");
                         trexio_s3_free_read_$group$(buffer, f, file, $group$);
@@ -600,6 +620,7 @@ trexio_exit_code trexio_s3_has_$group$(trexio_t* const file);
 trexio_exit_code
 trexio_s3_has_$group$ (trexio_t* const file)
 {
+printf("===== Début de trexio_s3_has_group ======\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   trexio_s3_t* s3_file=(trexio_s3_t*)file;
   /* Flush the group to make sure the group.txt file is created */
@@ -641,7 +662,7 @@ trexio_exit_code trexio_s3_flush_$group$(trexio_s3_t* const file);
 trexio_exit_code
 trexio_s3_flush_$group$ (trexio_s3_t* const file)
 {
-
+printf("======== Début de trexio_s3_fulsh_group ========\n");
   if (file == NULL) return TREXIO_INVALID_ARG_1;
 
   if (file->parent.mode == 'r') return TREXIO_READONLY;
@@ -819,8 +840,23 @@ printf("[FLUSH7] %s", line);
   // START REPEAT GROUP_DSET_ALL
 
   snprintf(line, sizeof(line), "$group_dset$\n");
+  line_len = strlen(line);
 printf("[FLUSH8] %s", line);
+  //=== Réallocation si nécessaire ===
+   while(buffer_size + line_len >= buffer_init){
+        buffer_init *=2;
+        char* new_buffer=realloc(buffer, buffer_init*sizeof(char));
+        if(!new_buffer){
+             FREE(buffer);
+             return TREXIO_FAILURE;
+        }
+        buffer=new_buffer;
+    }
+    memcpy(buffer+buffer_size, line, line_len);
+    buffer_size += line_len;
+
   for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
+//    printf("$group$->$group_dset$[i]: %$group_dset_format_printf$\n");
     snprintf(line, sizeof(line), "%$group_dset_format_printf$\n", $group$->$group_dset$[i]);
 printf("[FLUSH9] %s", line);
     line_len=strlen(line);
@@ -970,6 +1006,7 @@ trexio_exit_code trexio_s3_write_$group_num$(trexio_t* const file, const $group_
 trexio_exit_code
 trexio_s3_read_$group_num$ (trexio_t* const file, $group_num_dtype_double$* const num)
 {
+printf("======== Debut de trexio_s3_read_group_num =====\n");
 
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   if (num   == NULL) return TREXIO_INVALID_ARG_2;
@@ -1047,7 +1084,7 @@ trexio_exit_code
 trexio_s3_read_$group_dset$ (trexio_t* const file, $group_dset_dtype$* const $group_dset$,
                                const uint32_t rank, const uint64_t* dims)
 {
-
+printf("=========Début de trexio_s3_read_group_dset ========\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   if ($group_dset$ == NULL) return TREXIO_INVALID_ARG_2;
   if (rank < 1) return TREXIO_INVALID_ARG_3;
@@ -1083,7 +1120,7 @@ trexio_exit_code
 trexio_s3_write_$group_dset$ (trexio_t* const file, const $group_dset_dtype$* $group_dset$,
                                 const uint32_t rank, const uint64_t* dims)
 {
-
+printf("==== Début de trexio_s3_group_dset =====\n");
 //  if (file  == NULL)  return TREXIO_INVALID_ARG_1;
   if (file  == NULL){
 	printf("Erreur1 : File ==NULL\n");
@@ -1169,6 +1206,7 @@ trexio_exit_code
 trexio_s3_has_$group_dset$ (trexio_t* const file)
 {
 
+printf("=========Début de trexio_s3_has_group_dset ========\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
 
   //$group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
@@ -1202,6 +1240,7 @@ trexio_exit_code
 trexio_s3_read_$group_dset$ (trexio_t* const file, char* const dset, const uint32_t rank, const uint64_t* dims, const uint32_t max_str_len)
 {
 
+printf("=========Début de trexio_s3_read_group_dset dataset of strings ========\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   if (dset == NULL) return TREXIO_INVALID_ARG_2;
 
@@ -1229,6 +1268,10 @@ printf("[DEBUG2] dims[%u] = %" PRIu64 ", dims_in_file[%u] = %" PRIu64 "\n",
 
   strcpy(dset, "");
 printf("[DEBUG4.1] Adresse du tableau de chaînes: %p\n", (void*) $group$->$group_dset$);
+if ($group$->$group_dset$ == NULL) {
+    printf("[ERREUR] $group_dset$ est toujours NULL !\n");
+    return TREXIO_FAILURE; // On sort proprement
+}
   for (uint64_t i=0 ; i<dims[0] ; ++i) {
  printf("[DEBUG5] i = %" PRIu64 ", label = '%s'\n", i, $group$->$group_dset$[i]);
     strncat(dset, $group$->$group_dset$[i], max_str_len);
@@ -1247,6 +1290,7 @@ trexio_exit_code
 trexio_s3_write_$group_dset$ (trexio_t* const file, const char** dset, const uint32_t rank, const uint64_t* dims)
 {
 
+printf("=========Début de trexio_s3_write_group_dset dataset of strings ========\n");
  if (file  == NULL)  return TREXIO_INVALID_ARG_1;
   if (dset == NULL)  return TREXIO_INVALID_ARG_2;
 
@@ -1307,6 +1351,7 @@ trexio_exit_code
 trexio_s3_has_$group_dset$ (trexio_t* const file)
 {
 
+printf("=========Début de trexio_s3_has_group_dset dataset of strings ========\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
 
 //  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
@@ -1338,6 +1383,7 @@ trexio_exit_code
 trexio_s3_read_$group_str$ (trexio_t* const file, char* const str, const uint32_t max_str_len)
 {
 
+printf("=========Début de trexio_s3_read_group_dset string attribute  ========\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   if (str == NULL) return TREXIO_INVALID_ARG_2;
 
@@ -1357,6 +1403,7 @@ trexio_exit_code
 trexio_s3_write_$group_str$ (trexio_t* const file, const char *str)
 {
 
+printf("=========Début de trexio_s3_write_group_dset string attribute  ========\n");
   if (file == NULL) return TREXIO_INVALID_ARG_1;
   if (str  == NULL) return TREXIO_INVALID_ARG_2;
 
@@ -1389,6 +1436,7 @@ trexio_exit_code
 trexio_s3_has_$group_str$ (trexio_t* const file)
 {
 
+printf("=========Début de trexio_s3_has_group_dset string attribute  ========\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
 
   $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
@@ -1722,6 +1770,7 @@ trexio_exit_code trexio_s3_read_$group_dset$(trexio_t* const file,
                                                int64_t* const eof_read_size,
                                                double* const dset)
 {
+printf("======= Début trexio_s3_read_group_dset buffered vector =====\n");
   if (file == NULL) return TREXIO_INVALID_ARG_1;
   if (offset_file < 0) return TREXIO_INVALID_ARG_2;
   if (rank < 1) return TREXIO_INVALID_ARG_3;
@@ -1789,6 +1838,7 @@ trexio_exit_code trexio_s3_read_$group_dset$(trexio_t* const file,
 trexio_exit_code
 trexio_s3_read_$group_dset$_size(trexio_t* const file, int64_t* const size_max)
 {
+printf("======= Début trexio_s3_read_group_dset_size buffered vector =====\n");
   if (file == NULL) return TREXIO_INVALID_ARG_1;
   if (size_max == NULL) return TREXIO_INVALID_ARG_2;
 
@@ -1839,6 +1889,7 @@ trexio_exit_code trexio_s3_write_$group_dset$(trexio_t* const file,
                                                 const uint64_t* dims,
                                                 const double* dset)
 {
+printf("======= Début trexio_s3_write_group_dset buffered vector =====\n");
   if (file == NULL) return TREXIO_INVALID_ARG_1;
   if (offset_file < 0) return TREXIO_INVALID_ARG_2;
   if (rank < 1) return TREXIO_INVALID_ARG_3;
@@ -1921,6 +1972,7 @@ trexio_exit_code trexio_s3_write_$group_dset$(trexio_t* const file,
    #+begin_src c :tangle has_buffered_s3.c
 trexio_exit_code trexio_s3_has_$group_dset$(trexio_t* const file)
 {
+printf("======= Début trexio_s3_has_group_dset buffered vector =====\n");
   if (file == NULL) return TREXIO_INVALID_ARG_1;
 
   const char file_name[256] = "/$group_dset$.txt";
